--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-    <h1>Este es un sitio web con githun pages</h1>
+    <h1>Este es un sitio web con github pages</h1>
     <p>
         fue creado por fidel villalba en el curso profesional de git y github de platzi
     </p>
+    <p>><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Far.linkedin.com%2Fin%2Fricardo-daniel-romero-a3742667&psig=AOvVaw0t5T3OOzJADpVkXiRHfBh5&ust=1642911815332000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOimx9HBxPUCFQAAAAAdAAAAABAD" alt=""></p>
 </html>
